fix vertical alignment of search button

--- a/src/styles/SearchContainer.scss
+++ b/src/styles/SearchContainer.scss
@@ -86,6 +86,7 @@
          color: #fff;
          padding: 10px 15px;
          display: flex;
+         align-items: center;
          font-size: 20px;
          line-height: 30px;
          cursor: pointer;
